--- a/src/assets/stylesheets/components/process.scss
+++ b/src/assets/stylesheets/components/process.scss
@@ -39,8 +39,8 @@
       background-color: $white;
       border: 2px solid $primary-border-light;
       will-change: color, background-color, border-color;
-      transition: color 1.1s ease, background-color 2s ease,
-        border-color 2s ease;
+      transition: color 0.2s ease, background-color 1s ease,
+        border-color 1s ease;
 
       &.active {
         color: $white;
@@ -63,7 +63,8 @@
       margin-bottom: 6px;
       img {
         display: block;
-        transition: all 2s ease;
+        transition: all 1s ease;
+        cursor: pointer;
       }
       .section-img {
         opacity: 1;
